# zonohedron_simulation

./: .pre-commit-config.yaml  README.md  Zono_gen_v2.py  beta_rd_gen_zono3D.py  garbage.py  generation_zonohedre.py  nb_gene_primitifs.csv  nombre_gene_primi.py  pyproject.toml  temp.py
data/: nb_gene_primitifs2D.csv
src/: Zono_gen_v2.py  beta_rd_gen_zono3D.py  generation_zonohedre.py  nombre_gene_primi.py  random_gen_zonotope3D.py  temp.py  type.py  visualisation_utils.py  visualisation_zonotope.py
test/: garbage.py  temp.py  test_visualisation_zonotopes.py
tests/: temp.py  test_visualisation_zonotopes.py
