[project]
name = "zonohedron_simulation"
version = "0.1.0"
authors = [{ name="the-buf"}]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.15",
    "matplotlib>=3.10.1",
    "vtk>=9",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py310"]
lint.ignore = [
    "E501",
]

[tool.ruff]
line-length = 88
target-version = "py310"
lint.select = ["E", "F", "B"]
lint.ignore = [
    "E501",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
